aider: Fix image and text wrapping regressions, and make bio-section take up full viewport height.
# Aider chat conversation:

USER: That's a good step. That caused two regressions though. 1st we lost image wrapping / text wrapping and the text is now going behind the images and can't be seen. 2nd bio-section only takes up half of viewport height now

ASSISTANT: To fix these regressions, we need to modify the `styles/app.sass` file to:

1. Add styles to make the `.bio-section` class take up the full viewport height.
2. Add styles to make the text wrap around the images and not go behind them.

Here are the *SEARCH/REPLACE* blocks:

styles/app.sass
```sass
<<<<<<< SEARCH
.bio-section
  display: block
=======
.bio-section
  display: flex
  flex-direction: column
  align-items: center
  justify-content: center
  height: 100vh
>>>>>>> REPLACE
```

styles/app.sass
```sass
<<<<<<< SEARCH
.image-container
  position: relative
=======
.image-container
  position: relative
  float: right
  margin-left: 1em
>>>>>>> REPLACE
```

styles/app.sass
```sass
<<<<<<< SEARCH
.bio-image
  position: absolute
  top: 0
  right: 0
  opacity: 0
  transition: opacity 1s
=======
.bio-image
  position: absolute
  top: 0
  right: 0
  opacity: 0
  transition: opacity 1s
  max-width: 30vw
  height: auto
>>>>>>> REPLACE
```

--- a/styles/app.sass
+++ b/styles/app.sass
@@ -251,10 +251,16 @@ canvas
 .cursor-pointer
   cursor: pointer
 .bio-section
-  display: block
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  height: 100vh
 
 .image-container
   position: relative
+  float: right
+  margin-left: 1em
 
 .bio-image
   position: absolute
@@ -262,6 +268,8 @@ canvas
   right: 0
   opacity: 0
   transition: opacity 1s
+  max-width: 30vw
+  height: auto
 
 .bio-image.active
   opacity: 1
